--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
