--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --experimental-modules ./src/index.js",
+    "build": "nodemon --experimental-modules ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,13 +16,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3",
-    "netlify-cli": "^17.30.0",
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0"
+    "mongoose": "^8.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
