--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "nodemon --experimental-modules ./src/index.js",
+    "start": "nodemon --experimental-modules ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dhyan",
